# Temperature-Monitor

./: .gitignore.txt  CMakeLists.txt  README  README.md
docs/: Architecture Document.md
include/: adc_hal.h  adc_hal.hpp  cfg.h  cfg.hpp  eeprom.h  eeprom.hpp  gpio_hal.h  gpio_hal.hpp  i2c_hal.h  i2c_hal.hpp  led.h  led.hpp  temp_monitor_app.h  temp_monitor_app.hpp  temperature_sensor.h  temperature_sensor.hpp  timer.h  timer_hal.hpp
scripts/: build.bat
src/: adc_hal.c  adc_hal.cpp  eeprom.c  eeprom.cpp  gpio_hal.c  gpio_hal.cpp  i2c_hal.c  i2c_hal.cpp  led.c  led.cpp  main.c  main.cpp  temp_monitor_app.c  temp_monitor_app.cpp  temperature_sensor.c  temperature_sensor.cpp  timer.c  timer_hal.cpp
